--- a/Classes/ChatNavBarView.xib
+++ b/Classes/ChatNavBarView.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="16C67" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -14,25 +14,44 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="wfz-bX-QQK">
-                    <rect key="frame" x="161" y="4.5" width="53" height="35"/>
+                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="wfz-bX-QQK">
+                    <rect key="frame" x="67.5" y="5" width="240" height="35"/>
                     <subviews>
-                        <label opaque="NO" userInteractionEnabled="NO" tag="120" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=" " textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8e2-Js-UWk">
-                            <rect key="frame" x="0.0" y="0.0" width="53" height="19"/>
-                            <fontDescription key="fontDescription" type="system" weight="medium" pointSize="14"/>
-                            <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            <nil key="highlightedColor"/>
-                        </label>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SnM-MC-3Fi">
+                            <rect key="frame" x="0.0" y="0.0" width="240" height="17.5"/>
+                            <subviews>
+                                <label opaque="NO" userInteractionEnabled="NO" tag="120" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=" " textAlignment="center" lineBreakMode="middleTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8e2-Js-UWk">
+                                    <rect key="frame" x="118" y="1" width="4" height="17"/>
+                                    <fontDescription key="fontDescription" type="system" weight="medium" pointSize="14"/>
+                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_greater_than" translatesAutoresizingMaskIntoConstraints="NO" id="6X9-2K-cup">
+                                    <rect key="frame" x="126" y="6.5" width="7" height="7"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="7" id="4bP-cH-tfj"/>
+                                        <constraint firstAttribute="width" constant="7" id="92y-nX-wfU"/>
+                                    </constraints>
+                                </imageView>
+                            </subviews>
+                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                            <constraints>
+                                <constraint firstItem="8e2-Js-UWk" firstAttribute="centerX" secondItem="SnM-MC-3Fi" secondAttribute="centerX" id="QQq-Ds-zvN"/>
+                                <constraint firstItem="8e2-Js-UWk" firstAttribute="centerY" secondItem="SnM-MC-3Fi" secondAttribute="centerY" id="k6D-oO-yYp"/>
+                                <constraint firstItem="6X9-2K-cup" firstAttribute="leading" secondItem="8e2-Js-UWk" secondAttribute="trailing" constant="4" id="ufS-Qh-DNf"/>
+                                <constraint firstItem="6X9-2K-cup" firstAttribute="centerY" secondItem="SnM-MC-3Fi" secondAttribute="centerY" constant="1" id="ui7-Gn-kph"/>
+                            </constraints>
+                        </view>
                         <label opaque="NO" userInteractionEnabled="NO" tag="121" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Conversa" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ygh-08-Gp2">
-                            <rect key="frame" x="0.0" y="19" width="53" height="16"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                            <rect key="frame" x="0.0" y="17.5" width="240" height="17.5"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="11"/>
                             <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                             <nil key="highlightedColor"/>
                         </label>
                     </subviews>
                     <constraints>
                         <constraint firstAttribute="height" constant="35" id="8Om-4s-Bho"/>
-                        <constraint firstAttribute="width" relation="lessThanOrEqual" constant="300" id="yh9-dT-EFX"/>
+                        <constraint firstAttribute="width" relation="lessThanOrEqual" constant="275" id="yh9-dT-EFX"/>
                     </constraints>
                 </stackView>
             </subviews>
@@ -45,4 +64,7 @@
             <point key="canvasLocation" x="24.5" y="52"/>
         </view>
     </objects>
+    <resources>
+        <image name="ic_greater_than" width="21" height="21"/>
+    </resources>
 </document>
