--- a/Conversa/Base.lproj/LaunchScreen.storyboard
+++ b/Conversa/Base.lproj/LaunchScreen.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16B2555" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
     <device id="retina4_0" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -20,18 +20,17 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="im_logo_text" translatesAutoresizingMaskIntoConstraints="NO" id="gSB-v0-xgv">
-                                <rect key="frame" x="28" y="244" width="264" height="80"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="im_logo" translatesAutoresizingMaskIntoConstraints="NO" id="gSB-v0-xgv">
+                                <rect key="frame" x="115" y="239" width="90" height="90"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="80" id="1e7-cd-HCY"/>
+                                    <constraint firstAttribute="width" constant="90" id="HZ8-HL-YsS"/>
+                                    <constraint firstAttribute="height" constant="90" id="cwZ-y7-buj"/>
                                 </constraints>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="gSB-v0-xgv" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="BlB-Oy-qxs"/>
-                            <constraint firstAttribute="trailing" secondItem="gSB-v0-xgv" secondAttribute="trailing" constant="28" id="GAD-0M-DI4"/>
-                            <constraint firstItem="gSB-v0-xgv" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" constant="28" id="fkd-CN-Ka4"/>
                             <constraint firstItem="gSB-v0-xgv" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="zbm-u1-mUD"/>
                         </constraints>
                     </view>
@@ -42,6 +41,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="im_logo_text" width="500" height="166"/>
+        <image name="im_logo" width="170" height="170"/>
     </resources>
 </document>
