--- a/Conversa/es.lproj/Main.storyboard
+++ b/Conversa/es.lproj/Main.storyboard
@@ -18,7 +18,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" red="0.96862745100000003" green="0.96862745100000003" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <sections>
-                            <tableViewSection headerTitle="NOTIFICACIONES PUSH" footerTitle="Reproducir al recibir una notificación push" id="vDS-gI-Qqd" userLabel="Background Message">
+                            <tableViewSection headerTitle="NOTIFICACIONES PUSH" footerTitle="Reproducir al recibir una notificación" id="vDS-gI-Qqd" userLabel="Background Message">
                                 <cells>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="6EV-ky-aid">
                                         <rect key="frame" x="0.0" y="56" width="320" height="44"/>
@@ -50,7 +50,7 @@
                                     </tableViewCell>
                                 </cells>
                             </tableViewSection>
-                            <tableViewSection footerTitle="Mostrar notificación push" id="Jpw-G9-KhF" userLabel="Background Sound">
+                            <tableViewSection footerTitle="Mostrar notificación" id="Jpw-G9-KhF" userLabel="Background Sound">
                                 <cells>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="2vv-Zl-G0z">
                                         <rect key="frame" x="0.0" y="148" width="320" height="44"/>
@@ -82,7 +82,7 @@
                                     </tableViewCell>
                                 </cells>
                             </tableViewSection>
-                            <tableViewSection headerTitle="Notificacioens In-App" footerTitle="Reproducir al recibir un mensaje" id="TIO-Fs-dDp" userLabel="In-App Notifications">
+                            <tableViewSection headerTitle="Notificaciones In-App" footerTitle="Reproducir al recibir mensaje" id="TIO-Fs-dDp" userLabel="In-App Notifications">
                                 <cells>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="VA2-9b-Dvo">
                                         <rect key="frame" x="0.0" y="268" width="320" height="44"/>
@@ -114,7 +114,7 @@
                                     </tableViewCell>
                                 </cells>
                             </tableViewSection>
-                            <tableViewSection footerTitle="Mostrar al recibir un mensaje" id="XWR-1t-yiQ" userLabel="Message Notifications">
+                            <tableViewSection footerTitle="Mostrar notificación" id="XWR-1t-yiQ" userLabel="Message Notifications">
                                 <cells>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="vUm-4e-WEL">
                                         <rect key="frame" x="0.0" y="360" width="320" height="44"/>
@@ -373,7 +373,7 @@
         <!--Ayuda y Soporte-->
         <scene sceneID="Ctq-nB-lsW">
             <objects>
-                <viewController title="Ayuda y Soporte" id="aPc-ff-FZW" sceneMemberID="viewController">
+                <viewController title="Ayuda y Soporte" id="aPc-ff-FZW" customClass="HelpViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="8vM-GA-IGK"/>
                         <viewControllerLayoutGuide type="bottom" id="e5V-q6-j2u"/>
@@ -410,6 +410,9 @@
                                                 <state key="normal" title="LICENCIAS">
                                                     <color key="titleColor" red="0.2156862745" green="1" blue="0.46666666670000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 </state>
+                                                <connections>
+                                                    <action selector="licensesPressed:" destination="aPc-ff-FZW" eventType="touchUpInside" id="hct-PR-Z1b"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                         <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
@@ -1749,7 +1752,7 @@
         <!--Profile Dialog View Controller-->
         <scene sceneID="8yA-j6-h3O">
             <objects>
-                <viewController modalPresentationStyle="overFullScreen" id="La2-em-z5r" customClass="ProfileDialogViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="profileViewController" modalPresentationStyle="overFullScreen" useStoryboardIdentifierAsRestorationIdentifier="YES" id="La2-em-z5r" customClass="ProfileDialogViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="VVV-k2-P0o"/>
                         <viewControllerLayoutGuide type="bottom" id="Ndx-wu-lqx"/>
@@ -2307,7 +2310,7 @@
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="RECUPERAR CONTRASEÑA" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yzZ-1y-Eva">
-                                <rect key="frame" x="56.5" y="49" width="207" height="20"/>
+                                <rect key="frame" x="57" y="49" width="207" height="20"/>
                                 <fontDescription key="fontDescription" type="system" weight="medium" pointSize="16"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -2802,7 +2805,7 @@
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="INICIAR SESION" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dy0-0T-vWN">
-                                <rect key="frame" x="100.5" y="49" width="119" height="20"/>
+                                <rect key="frame" x="101" y="49" width="119" height="20"/>
                                 <fontDescription key="fontDescription" type="system" weight="medium" pointSize="16"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -3022,7 +3025,7 @@
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="REGISTRARME" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fvi-8u-Zes">
-                                <rect key="frame" x="104.5" y="49" width="111" height="20"/>
+                                <rect key="frame" x="105" y="49" width="111" height="20"/>
                                 <fontDescription key="fontDescription" type="system" weight="medium" pointSize="16"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -3047,7 +3050,7 @@
                         <outlet property="passwordTextField" destination="cIX-uX-QFD" id="jxB-rw-WAJ"/>
                         <outlet property="scrollView" destination="zkL-A4-1xX" id="gXy-sa-bP4"/>
                         <outlet property="signupButton" destination="UjJ-Um-6C4" id="MwX-LC-dkY"/>
-                        <outlet property="termsPrivacyLabel" destination="zxx-4P-X2D" id="jHC-rq-e6n"/>
+                        <outlet property="termsPrivacyLabel" destination="zxx-4P-X2D" id="L5A-FQ-w3w"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="PnY-pp-w83" userLabel="First Responder" sceneMemberID="firstResponder"/>
