--- a/Conversa/Base.lproj/Tutorial.storyboard
+++ b/Conversa/Base.lproj/Tutorial.storyboard
@@ -30,7 +30,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="im_tutorial_one" translatesAutoresizingMaskIntoConstraints="NO" id="wyo-gv-rl1">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="im_tutorial_1" translatesAutoresizingMaskIntoConstraints="NO" id="wyo-gv-rl1">
                                 <rect key="frame" x="21" y="25" width="333" height="637"/>
                             </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zru-R0-PCW">
