--- a/Conversa/es.lproj/Main.storyboard
+++ b/Conversa/es.lproj/Main.storyboard
@@ -5,7 +5,7 @@
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13174"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -1004,7 +1004,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="im_tutorial_one" translatesAutoresizingMaskIntoConstraints="NO" id="wyo-gv-rl1">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="im_tutorial_1" translatesAutoresizingMaskIntoConstraints="NO" id="wyo-gv-rl1">
                                 <rect key="frame" x="21" y="25" width="278" height="538"/>
                             </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zru-R0-PCW">
@@ -1777,11 +1777,11 @@
                         <viewControllerLayoutGuide type="bottom" id="Ndx-wu-lqx"/>
                     </layoutGuides>
                     <view key="view" opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" id="U4a-u3-rV3">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="455"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lUw-ck-DWS">
-                                <rect key="frame" x="19" y="37.5" width="282" height="380"/>
+                                <rect key="frame" x="19" y="94" width="282" height="380"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="xod-TA-fXj">
                                         <rect key="frame" x="0.0" y="310" width="282" height="70"/>
@@ -3090,7 +3090,7 @@
         <image name="im_help_pattern" width="1000" height="1000"/>
         <image name="im_logo" width="170" height="170"/>
         <image name="im_logo_text" width="500" height="166"/>
-        <image name="im_tutorial_one" width="1045" height="2041"/>
+        <image name="im_tutorial_1" width="348" height="680"/>
         <image name="tab_chat_active" width="28" height="28"/>
         <image name="tab_chat_inactive" width="28" height="28"/>
         <image name="tab_explore_active" width="28" height="28"/>
@@ -3099,6 +3099,6 @@
         <image name="tab_settings_inactive" width="28" height="28"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="4wh-38-Ytd"/>
+        <segue reference="9Zj-mD-1sj"/>
     </inferredMetricsTieBreakers>
 </document>
